--- a/testProject/Presentation/TheFarm/TheFarm.csproj
+++ b/testProject/Presentation/TheFarm/TheFarm.csproj
@@ -162,6 +162,15 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\testProject.csproj">
+      <Project>{c712f909-8f5f-4301-a8c2-fb4acb1d05bf}</Project>
+      <Name>testProject</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
