--- a/testProject/App.config
+++ b/testProject/App.config
@@ -17,5 +17,6 @@
     <add name="MachinesContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False" providerName="System.Data.SqlClient" />
     <add name="EnergySourcesContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False" providerName="System.Data.SqlClient" />
     <add name="BankContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False" providerName="System.Data.SqlClient" />
+    <add name="UsersContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
