--- a/testProject/Presentation/TheFarm/TheFarm.csproj
+++ b/testProject/Presentation/TheFarm/TheFarm.csproj
@@ -101,6 +101,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="UserSignIn.cs">
       <SubType>Form</SubType>
     </Compile>
