Emii pak trq da e ok

--- a/projcet/testProject/Presentation/TheFarm/TheFarm.csproj
+++ b/projcet/testProject/Presentation/TheFarm/TheFarm.csproj
@@ -170,6 +170,9 @@
       <DependentUpon>UserLogIn.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\Business.BankBusiness.datasource" />
+    <None Include="Properties\DataSources\Data.EcoFarmSoftwareContext.datasource" />
+    <None Include="Properties\DataSources\Data.Models.Bank.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
